--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "start": "cross-env NODE_ENV=development tsc-watch -p tsconfig.build.json --onSuccess \"node ./dist/main.js\"",
     "apidoc": "zapidoc -u localhost:19005/api-doc-json --output ./ddd/",
     "lint": "tslint -p tsconfig.json -c tslint.json",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": ""
   },
   "require": {},
   "devDependencies": {
