--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "z-swagger-to-apidoc",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "swagger文档转换成apidoc文档插件",
   "main": "dist/main.js",
   "types": "dist/main.d.ts",
@@ -12,7 +12,7 @@
     "conversion",
     "convert"
   ],
-  "homepage": "https://github.com/tec8297729/z-swagger-to-apidoc",
+  "homepage": "https://www.jonhuu.com/",
   "repository": {
     "type": "git",
     "url": "https://github.com/tec8297729/z-swagger-to-apidoc"
@@ -38,8 +38,8 @@
     "typescript": "^3.6.3"
   },
   "dependencies": {
-    "apidoc": "^0.17.7",
-    "commander": "^3.0.1",
+    "apidoc": "^0.22.1",
+    "commander": "^5.1.0",
     "fs-extra": "^9.0.0",
     "node-fetch": "^2.6.0"
   },
